generated/readme/4.0/getting-started.md
---
id: getting-started
title: 'Getting Started'
order: 3
source: readme@4.0.0
---

### Prerequisites

- **Runtime**: Node.js 22.13 or newer, or Bun 1.x+
- **TypeScript**: 5.0+ with `skipLibCheck` enabled, as generated apps have it; 5.8+ with it off
- **Package manager**: npm, yarn, pnpm, or bun
- **Peer dependencies**: `discord.js` 14 and `dotenv` 18 — `meocord create` installs both

MeoCord ships dual ESM/CJS builds. New projects generated by the CLI are preconfigured for ESM.

### Create a New App

```shell
npx meocord create <your-app-name>
```

The CLI detects installed package managers and prompts you to choose, or you can pass a flag directly:

```shell
npx meocord create <your-app-name> --use-bun
npx meocord create <your-app-name> --use-npm
npx meocord create <your-app-name> --use-pnpm
npx meocord create <your-app-name> --use-yarn
```

The generated project is named after what you passed, pins the framework version that
created it, and comes with a working slash command, button, select menu, modal, context
menu, message and reaction controller, plus a guard, a service and a spec for each.

Add your bot token and start:

```shell
cd <your-app-name>
cp .env.example .env       # then put your token in DISCORD_TOKEN
npx meocord start --dev    # development with live-reload
npx meocord start --build --prod  # production build + start
```

The token is read from the environment rather than written into `meocord.config.ts`,
which is committed — `.env` is gitignored so a token cannot be pushed by accident.
Building needs no token; only starting does.

### Quick Example

A minimal slash command. A command Discord knows about needs a builder — that is what gets registered. The
builder receives the name from `@Command`, so the two cannot drift apart:

```typescript
import { SlashCommandBuilder } from 'discord.js'
import { CommandBuilder } from 'meocord/decorator'
import { CommandType } from 'meocord/enum'

@CommandBuilder(CommandType.SLASH)
export class GreetingCommandBuilder {
  build(commandName: string) {
    return new SlashCommandBuilder()
      .setName(commandName)
      .setDescription('Greets someone')
      .addStringOption(option => option.setName('name').setDescription('Who to greet').setRequired(true))
  }
}
```

```typescript
import { Controller, Command, UseGuard } from 'meocord/decorator'
import { type ChatInputCommandInteraction } from 'discord.js'
import { GreetingCommandBuilder } from '@src/controllers/slash/builders/greeting.builder.js'
import { RateLimitGuard } from '@src/guards/rate-limit.guard.js'
import { GreetingService } from '@src/services/greeting.service.js'

@Controller()
export class GreetingSlashController {
  constructor(private readonly greetingService: GreetingService) {}

  @Command('greet', GreetingCommandBuilder)
  @UseGuard({ provide: RateLimitGuard, params: { limit: 3, windowInSeconds: 10 } })
  async greet(interaction: ChatInputCommandInteraction) {
    const name = interaction.options.getString('name', true)
    const message = await this.greetingService.buildGreeting(name)
    await interaction.reply({ content: message })
  }
}
```

Register it in `src/app.ts`:

```typescript
import { MeoCord } from 'meocord/decorator'
import { GatewayIntentBits, Partials } from 'discord.js'
import { GreetingSlashController } from '@src/controllers/slash/greeting.slash.controller.js'
import { GreetingService } from '@src/services/greeting.service.js'

@MeoCord({
  controllers: [GreetingSlashController],
  // `services` is for specialized, event-driven services (e.g. RabbitMQ consumers,
  // schedulers). Regular business-logic services are injected via controller
  // constructors — they don't belong here.
  services: [RabbitMQService],
  clientOptions: {
    intents: [GatewayIntentBits.Guilds, GatewayIntentBits.GuildMessages],
    partials: [Partials.Message, Partials.Channel],
  },
})
export class App {}
```

---
