generated/readme/4.1/getting-started.md
---
id: getting-started
title: 'Getting Started'
order: 3
source: readme@4.1.0-beta.0
---

### Prerequisites

- **Runtime**: Node.js 22.13 or newer, or Bun 1.x+
- **TypeScript**: 5.0+ with `skipLibCheck` enabled, as generated apps have it; 5.8+ with it off
- **Package manager**: npm, yarn, pnpm, or bun
- **Peer dependencies**: `discord.js` 14 and `dotenv` 18 — `meocord create` installs both

MeoCord ships dual ESM/CJS builds. New projects generated by the CLI are preconfigured for ESM.

### Create a New App

```shell
npx meocord create <your-app-name>
```

The CLI detects installed package managers and prompts you to choose, or you can pass a flag directly:

```shell
npx meocord create <your-app-name> --use-bun
npx meocord create <your-app-name> --use-npm
npx meocord create <your-app-name> --use-pnpm
npx meocord create <your-app-name> --use-yarn
```

The generated project is named after what you passed, pins the framework version that
created it, and comes with a working slash command, button, select menu, modal, context
menu, message and reaction controller, plus a guard, a presenter, a service and a spec for
each. The samples answer through `respond()`, defer slow work with `@Defer`, and limit how
often each command runs with `@Cooldown`.

Add your bot token and start:

```shell
cd <your-app-name>
cp .env.example .env       # then put your token in DISCORD_TOKEN
npx meocord start --dev    # development with live-reload
npx meocord start --build --prod  # production build + start
```

The token is read from the environment rather than written into `meocord.config.ts`,
which is committed — `.env` is gitignored so a token cannot be pushed by accident.
Building needs no token; only starting does.

### Quick Example

A minimal slash command. A command Discord knows about needs a builder — that is what gets registered. The
builder receives the name from `@Command`, so the two cannot drift apart:

```typescript
import { SlashCommandBuilder } from 'discord.js'
import { CommandBuilder } from 'meocord/decorator'
import { CommandType } from 'meocord/enum'

@CommandBuilder(CommandType.SLASH)
export class GreetingCommandBuilder {
  build(commandName: string) {
    return new SlashCommandBuilder()
      .setName(commandName)
      .setDescription('Greets someone')
      .addStringOption(option => option.setName('name').setDescription('Who to greet').setRequired(true))
  }
}
```

```typescript
import { respond } from 'meocord/common'
import { Controller, Command, Cooldown } from 'meocord/decorator'
import { type ChatInputCommandInteraction } from 'discord.js'
import { GreetingCommandBuilder } from '@src/controllers/slash/builders/greeting.builder.js'
import { GreetingService } from '@src/services/greeting.service.js'

@Controller()
export class GreetingSlashController {
  constructor(private readonly greetingService: GreetingService) {}

  @Command('greet', GreetingCommandBuilder)
  @Cooldown({ uses: 3, seconds: 10 })
  async greet(interaction: ChatInputCommandInteraction) {
    const name = interaction.options.getString('name', true)
    const message = await this.greetingService.buildGreeting(name)
    await respond(interaction).send({ content: message })
  }
}
```

The service it injects is a plain class:

```typescript
import { Service } from 'meocord/decorator'

@Service()
export class GreetingService {
  async buildGreeting(name: string): Promise<string> {
    return `Hello, ${name}!`
  }
}
```

Register the controller in `src/app.ts`:

```typescript
import { MeoCord } from 'meocord/decorator'
import { GatewayIntentBits } from 'discord.js'
import { GreetingSlashController } from '@src/controllers/slash/greeting.slash.controller.js'

@MeoCord({
  controllers: [GreetingSlashController],
  clientOptions: { intents: [GatewayIntentBits.Guilds] },
})
export default class App {}
```

`GreetingService` needs no listing: a controller that injects it is enough. `services` is for a service nothing injects that still has to exist, such as a scheduler or a queue consumer.

---
